--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <title>Namaste React by PK</title>
 </head>
 <body>
-  <div id="root">
-    <h1>Hello World</h1>
-  </div>
+  <div id="root"></div>
+  <script>
+    const heading = document.createElement('h1');
+    heading.innerHTML = 'Hello World from JavaScript';
+
+    const root = document.getElementById('root');
+    root.appendChild(heading);
+  </script>
 </body>
 </html>
