--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./index.css" rel="stylesheet" />
     <title>Namaste React by PK</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>I'm Purushotham</h1>
+    </div>
+    <h2>I'm learning React</h2>
     <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
