--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@
     <div id="root">
       <h1>I'm Purushotham</h1>
     </div>
-    <h2>I'm learning React</h2>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    <script src="./App.js" type="module"></script>
   </body>
 </html>
